<resources>
    <string name="app_name">业主APP</string>
    <string name="network_request_failed">网络请求失败</string>
    <string name="menu_home">社区</string>
    <string name="menu_services">服务</string>
    <string name="menu_housekeeper">管家</string>
    <string name="menu_message">通知</string>
    <string name="menu_account">我的</string>


    <!--会话界面-->
    <string name="album">相册</string>
    <string name="please_to_talk">按住 说话</string>
    <string name="shot">拍摄</string>
    <string name="location">位置</string>
    <string name="red_pack">红包</string>
    <string name="wx_red_pack">微信红包</string>

    <string name="send">发送</string>
    <string name="face_tip">拿起手机，眨眨眼</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>