<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@mipmap/app_icon_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/menu_services"
        android:icon="@mipmap/app_icon_service"
        android:title="@string/menu_services" />
    <item
        android:id="@+id/menu_housekeeper"
        android:icon="@mipmap/app_icon_housekeeper"
        android:title="@string/menu_housekeeper" />

    <item
        android:id="@+id/menu_message"
        android:icon="@mipmap/app_icon_message"
        android:title="@string/menu_message" />
    <item
        android:id="@+id/menu_account"
        android:icon="@mipmap/app_icon_me"
        android:title="@string/menu_account" />

</menu>